--- a/IONIC/componentes/src/app/componentes/header/header.component.html
+++ b/IONIC/componentes/src/app/componentes/header/header.component.html
@@ -3,6 +3,6 @@
         <ion-buttons slot="start">
             <ion-back-button defaultHref="/" text="Regresar" color="dark" mode="ios"></ion-back-button>
         </ion-buttons>
-        <ion-title>inicio</ion-title>
+        <ion-title class="ion-text-capitalize">{{ titulo }}</ion-title>
     </ion-toolbar>
 </ion-header>
