--- a/IONIC/componentes/src/app/pages/action-sheet/action-sheet.page.html
+++ b/IONIC/componentes/src/app/pages/action-sheet/action-sheet.page.html
@@ -1,5 +1,8 @@
-<app-header></app-header>
+<app-header titulo="action-sheet"></app-header>
 
-<ion-content>
+<ion-content class="ion-padding">
 
+    <ion-button (click)="presentActionSheet()" expand="block">
+        Click me
+    </ion-button>
 </ion-content>
