--- a/IONIC/componentes/src/app/pages/alert/alert.page.html
+++ b/IONIC/componentes/src/app/pages/alert/alert.page.html
@@ -1,5 +1,19 @@
-<app-header></app-header>
+<app-header titulo="alert"></app-header>
 
 <ion-content>
+
+    <ion-button (click)="presentAlert()" expand="block">
+        Alert
+    </ion-button>
+
+    <ion-button (click)="presentAlertMultipleButtons()" expand="block">
+        Alert MultiButton
+    </ion-button>
+
+    <ion-button (click)="presentAlertPrompt()" expand="block">
+        Alert Promp
+    </ion-button>
+
+
 
 </ion-content>
