--- a/IONIC/componentes/src/app/pages/avatar/avatar.page.html
+++ b/IONIC/componentes/src/app/pages/avatar/avatar.page.html
@@ -25,4 +25,11 @@
         <ion-label>Avatar</ion-label>
     </ion-chip>
 
+    <ion-item>
+        <ion-avatar slot="start" *ngFor="let item of [1,1,1,1,1,1,1]">
+            <img src="/assets/img/avatar.png">
+        </ion-avatar>
+        <ion-label>Avatar</ion-label>
+    </ion-item>
+
 </ion-content>
