--- a/IONIC/componentes/src/app/pages/inicio/inicio.page.html
+++ b/IONIC/componentes/src/app/pages/inicio/inicio.page.html
@@ -7,7 +7,7 @@
 <ion-content>
 
     <ion-list>
-        <ion-item detail="true" [routerLink]="c.redirecTo" *ngFor="let c of componentes">
+        <ion-item detail="true" [routerLink]="c.redirecTo" *ngFor="let c of componentes | async">
             <ion-icon [name]="c.icon" slot="start"></ion-icon>
             <ion-label>{{c.name}}</ion-label>
         </ion-item>
