--- a/IONIC/componentes/src/app/pages/list/list.page.html
+++ b/IONIC/componentes/src/app/pages/list/list.page.html
@@ -4,20 +4,24 @@
 
     <ion-list>
         <ion-list>
-            <ion-item-sliding *ngFor="let item of usuario | async">
+            <ion-item-sliding *ngFor="let user of usuario | async">
                 <ion-item-options side="start">
-                    <ion-item-option (click)="favorite(item)" color="primary" slot="icon-only">
+                    <ion-item-option (click)="favorite(user)" color="primary" slot="icon-only">
                         <ion-icon slot="start" name="heart-outline"></ion-icon>
                     </ion-item-option>
-                    <ion-item-option (click)="share(item)" color="success" slot="icon-only">
+                    <ion-item-option (click)="share(user)" color="success" slot="icon-only">
                         <ion-icon slot="start" name="share-outline"></ion-icon>
                     </ion-item-option>
                 </ion-item-options>
                 <ion-item>
-                    <ion-label>Item</ion-label>
+                    <ion-label>
+                        <h3>{{ user.name }}</h3>
+                        <p>{{ user.email}}</p>
+                    </ion-label>
+                    <ion-label class="ion-text-end text-small">{{ user.phone}}</ion-label>
                 </ion-item>
                 <ion-item-options side="end">
-                    <ion-item-option (click)="unread(item)" color="danger" slot="icon-only">
+                    <ion-item-option (click)="unread(user)" color="danger" slot="icon-only">
                         <ion-icon slot="start" name="trash-outline"></ion-icon>
                     </ion-item-option>
                 </ion-item-options>
