--- a/IONIC/componentes/src/app/pages/inicio/inicio.page.html
+++ b/IONIC/componentes/src/app/pages/inicio/inicio.page.html
@@ -1,5 +1,8 @@
 <ion-header>
     <ion-toolbar>
+        <ion-button slot="start">
+            <ion-menu-button menu="main"></ion-menu-button>
+        </ion-button>
         <ion-title>inicio</ion-title>
     </ion-toolbar>
 </ion-header>
