Codigo clase 4 de febrero

--- a/IONIC/componentes/src/app/pages/segment/segment.page.html
+++ b/IONIC/componentes/src/app/pages/segment/segment.page.html
@@ -24,7 +24,7 @@
 <ion-content>
 
     <ion-list>
-        <ion-item *ngFor="let heroe of (superHeroes | async) ">
+        <ion-item *ngFor="let heroe of (superHeroes | async) | filtro:publisher:'publisher'">
             <ion-label>
                 <h3>{{heroe.superhero}} <small>{{heroe.alter_ego}}</small></h3>
                 <p>{{heroe.first_appearance}}</p>
@@ -33,6 +33,22 @@
             <ion-label class="ion-text-right">{{heroe.publisher}}</ion-label>
         </ion-item>
 
+    </ion-list>
+
+    <ion-list *ngIf=" (superHeroes | async) === null">
+        <ion-item *ngFor="let item of [1,1,1,1,1,1,1,1,1,1,1,1,1,1,1]">
+            <ion-label>
+                <h3>
+                    <ion-skeleton-text animated style="width: 70%"></ion-skeleton-text>
+                </h3>
+                <p>
+                    <ion-skeleton-text animated style="width: 100%"></ion-skeleton-text>
+                </p>
+            </ion-label>
+
+            <ion-skeleton-text animated slot="end" style="width: 100px; height:50px"></ion-skeleton-text>
+
+        </ion-item>
     </ion-list>
 
 </ion-content>
