--- a/IONIC/peliculasAPP/src/app/tab1/tab1.page.html
+++ b/IONIC/peliculasAPP/src/app/tab1/tab1.page.html
@@ -1,9 +1,12 @@
 <ion-content [fullscreen]="true">
+    <ion-grid fixed>
+        <ion-row>
+            <ion-col>
+                <h3>Películas Nuevas</h3>
+            </ion-col>
+        </ion-row>
+    </ion-grid>
 
-    <ion-slides mode="ios" pager="ios" scrollbar="ios">
-        <ion-slide *ngFor="let pelicula of peliculasRecientes">
-            <h1>{{pelicula.backdrop_path}}</h1>
-        </ion-slide>
-    </ion-slides>
+    <app-slideshow-backdrop [peliculas]="peliculasRecientes"></app-slideshow-backdrop>
 
 </ion-content>
