--- a/IONIC/peliculasAPP/src/app/components/slideshow-pares/slideshow-pares.component.html
+++ b/IONIC/peliculasAPP/src/app/components/slideshow-pares/slideshow-pares.component.html
@@ -1,9 +1,9 @@
 <ion-slides [options]="slideOpts">
-    <ion-slide *ngFor="let pelicula of peliculas">
+    <ion-slide *ngFor="let pelis of peliculas | pares">
 
         <ion-row>
-            <ion-col size="12">
-                <ion-card>
+            <ion-col size="12" *ngFor="let pelicula of pelis">
+                <ion-card mode="md" (click)="verDetalle(pelicula.id)">
                     <img class="poster" [src]="pelicula.poster_path | imagen " alt="">
                 </ion-card>
             </ion-col>
