--- a/IONIC/peliculasAPP/src/app/components/detalle/detalle.component.html
+++ b/IONIC/peliculasAPP/src/app/components/detalle/detalle.component.html
@@ -70,7 +70,7 @@
 
         <ion-buttons slot="start">
             <ion-button (click)="regresar()">
-                <ion-icon slot="start" name="arrow-round-back"></ion-icon>
+                <ion-icon slot="start" name="arrow-back-outline"></ion-icon>
                 Regresar
             </ion-button>
             <ion-button (click)="favorito()">
