--- a/IONIC/peliculasAPP/src/app/tab2/tab2.page.html
+++ b/IONIC/peliculasAPP/src/app/tab2/tab2.page.html
@@ -1,17 +1,55 @@
 <ion-header [translucent]="true">
     <ion-toolbar>
         <ion-title>
-            Tab 2
+            Buscar Película
         </ion-title>
     </ion-toolbar>
 </ion-header>
 
+<ion-toolbar>
+    <ion-searchbar placeholder="Buscar Pelicula" animated debounce="700" [value]="textBuscar" (ionChange)="buscar($event)"></ion-searchbar>
+</ion-toolbar>
+
 <ion-content [fullscreen]="true">
-    <ion-header collapse="condense">
-        <ion-toolbar>
-            <ion-title size="large">Tab 2</ion-title>
-        </ion-toolbar>
-    </ion-header>
+
+    <ion-grid *ngIf="buscando">
+        <ion-row>
+            <ion-col>
+                <ion-spinner name="crescentbubbles"></ion-spinner>
+            </ion-col>
+        </ion-row>
+    </ion-grid>
+
+
+
+    <ion-list *ngIf="peliculas.length===0">
+        <ion-list-header>
+            <ion-label>Ideas</ion-label>
+        </ion-list-header>
+        <ion-item *ngFor="let idea of ideas">
+            <ion-label color="primary" (click)="textBuscar = idea">{{idea}}</ion-label>
+        </ion-item>
+
+
+    </ion-list>
+
+    <ion-grid fixed>
+        <ion-row>
+            <ion-col size="6" *ngFor="let pelicula of peliculas">
+
+                <ion-card>
+                    <img [src]="pelicula.poster_path | imagen" alt="">
+                    <ion-card-header>
+                        <ion-card-subtitle>{{ pelicula.release_date }}</ion-card-subtitle>
+                    </ion-card-header>
+                    <ion-card-content>
+                        <h2>{{pelicula.title}}</h2>
+                    </ion-card-content>
+                </ion-card>
+
+            </ion-col>
+        </ion-row>
+    </ion-grid>
 
 
 </ion-content>
