--- a/IONIC/peliculasAPP/src/app/tab2/tab2.page.html
+++ b/IONIC/peliculasAPP/src/app/tab2/tab2.page.html
@@ -37,7 +37,7 @@
         <ion-row>
             <ion-col size="6" *ngFor="let pelicula of peliculas">
 
-                <ion-card>
+                <ion-card (click)="detallePelicula(pelicula.id)">
                     <img [src]="pelicula.poster_path | imagen" alt="">
                     <ion-card-header>
                         <ion-card-subtitle>{{ pelicula.release_date }}</ion-card-subtitle>
