Creacion del mapa

--- a/IONIC/qrscanner/src/app/pages/tab2/tab2.page.html
+++ b/IONIC/qrscanner/src/app/pages/tab2/tab2.page.html
@@ -1,15 +1,24 @@
 <ion-header [translucent]="true">
     <ion-toolbar>
         <ion-title>
-            Tab 2
+            Historial
         </ion-title>
+        <ion-button (click)="enviarCorreo()" color="primary" slot="end">
+            <ion-icon slot="icon-only" name="send"></ion-icon>
+        </ion-button>
     </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-    <ion-header collapse="condense">
-        <ion-toolbar>
-            <ion-title size="large">Tab 2</ion-title>
-        </ion-toolbar>
-    </ion-header>
+
+    <ion-list>
+        <ion-item *ngFor="let registro of dataLocal.guardados" detail (click)="abrirRegistro(registro)">
+            <ion-icon slot="start" [name]="registro.icon" color="primary"></ion-icon>
+            <ion-label>
+                <h2>{{registro.text}}</h2>
+                <p>{{registro.created | date:'medium'}}</p>
+            </ion-label>
+        </ion-item>
+    </ion-list>
+
 </ion-content>
