Se creo la funcionalidad de envio de correo

--- a/IONIC/qrscanner/src/app/pages/mapa/mapa.page.html
+++ b/IONIC/qrscanner/src/app/pages/mapa/mapa.page.html
@@ -2,4 +2,8 @@
 
     <div id='map'></div>
 
+
+    <ion-back-button defaultHref="/tabs/tab2" text="" class="boton-regresar" icon="close-circle"></ion-back-button>
+
+
 </ion-content>
