--- a/IONIC/qrscanner/src/app/pages/mapa/mapa.page.scss
+++ b/IONIC/qrscanner/src/app/pages/mapa/mapa.page.scss
@@ -3,3 +3,10 @@
     height: 100% !important;
     background-color: white;
 }
+
+.boton-regresar {
+    position: fixed;
+    top: 40px;
+    right: 12px;
+    font-size: 24px;
+}
